# SigmaWolf-Engine

./: CMakeLists.txt  Conventions.MD  DDoc.md  README.MD  main.c  todo.md
src/: main.c
src/Canvas/: Canvas.c  Canvas.h
src/EventHandler/: EventHandler.c  EventHandler.h
src/RenderObject/: RenderObject.c  RenderObject.h
